[CLEAR-91] Add error alert model

--- a/MobileConsents/Resources/en.lproj/Localizable.strings
+++ b/MobileConsents/Resources/en.lproj/Localizable.strings
@@ -8,4 +8,5 @@
 
 "errorAlert.title" = "Error";
 "errorAlert.message" = "Message";
-"errorAlert.retryButtonTitle" = "Retry button title";
+"errorAlert.retryButtonTitle" = "Try again";
+"errorAlert.cancelButtonTitle" = "Cancel";
