--- a/MobileConsents/Resources/en.lproj/Localizable.strings
+++ b/MobileConsents/Resources/en.lproj/Localizable.strings
@@ -10,3 +10,4 @@
 "errorAlert.message" = "Consent terms can not be loaded at this time";
 "errorAlert.retryButtonTitle" = "Try again";
 "errorAlert.cancelButtonTitle" = "Cancel";
+"readMoreButton" = "Read more";
